--- a/UMessaGe/app/src/main/res/layout/iniciar_sesion_activity.xml
+++ b/UMessaGe/app/src/main/res/layout/iniciar_sesion_activity.xml
@@ -4,30 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1C72A5">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:gravity="center"
-        android:text="UMessaGe"
-        android:textColor="#CB342F"
-        android:textFontWeight="750"
-        android:textSize="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:background="@color/background_login"
+    android:padding="15dp">
 
     <Button
         android:id="@+id/btnIniciarSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="155dp"
-        android:backgroundTint="#0386D0"
-        android:text="Iniciar Sesion"
+        android:backgroundTint="@color/login_button"
+        android:text="@string/login"
         android:textColor="@color/white"
-        android:textSize="15dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -36,10 +24,11 @@
         android:id="@+id/etbEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="65dp"
-        android:layout_marginVertical="15dp"
-        android:hint="Email"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginVertical="15sp"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:textColor="@color/hint_login"
         app:layout_constraintBottom_toTopOf="@+id/etbPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -48,11 +37,53 @@
         android:id="@+id/etbPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="65dp"
+        android:layout_marginHorizontal="50dp"
         android:layout_marginBottom="35dp"
-        android:hint="Contraseña"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion" />
+        android:textColor="@color/hint_login"
+        app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txvIngresar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
+        android:gravity="center"
+        android:text="@string/login_opc"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@id/etbEmail"
+        app:layout_constraintEnd_toStartOf="@id/txvRegistrarse"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txvRegistrarse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
+        android:gravity="center"
+        android:text="@string/registrarse_opc"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@id/etbEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/txvIngresar" />
+
+    <TextView
+        android:id="@+id/txlogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:text="@string/app_name"
+        android:textAppearance="bold"
+        android:textColor="@color/umessage_logo"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
